<resources>
    <string name="app_name">TheMovieDB</string>
    <string name="image_base_url">https://image.tmdb.org/t/p/original/</string>
    <string name="generic_error">Error generico</string>
    <string name="no_id">sin id</string>
    <string name="toolbar_title">The Movie DB</string>
    <string name="no_favorites">Aun no tienes seleccionados favoritos</string>
    <string name="back">Ir atrás</string>
    <string name="added">SUSCRIPTO</string>
    <string name="add">SUSCRIBIRME</string>
    <string name="overview">OVERVIEW</string>
    <string name="favorites">FAVORITOS</string>
    <string name="recommended">RECOMENDADAS</string>
    <string name="cancel">Cancel</string>
    <string name="search">Buscar</string>
</resources>