...
import coil.request.ImageRequest
import com.tapdeveloper.themoviedb.R
import com.tapdeveloper.themoviedb.domain.model.Movie
import com.tapdeveloper.themoviedb.ui.theme.Shapes

@VisibleForTesting(otherwise = java.lang.reflect.Modifier.PRIVATE)
const val favoritedMovieCardTag = "favoritedMovieCardTag"

@VisibleForTesting(otherwise = java.lang.reflect.Modifier.PRIVATE)
const val favoritedEmptyListTag = "favoritedEmptyListTag"

@Composable
fun FavoritesLazyRow(
    modifier: Modifier,
    movies: List<Movie>,
    isLoading: Boolean,
...
