...
import com.tapdeveloper.themoviedb.presentation.moviesList.MoviesViewmodel
import com.tapdeveloper.themoviedb.ui.theme.Grey200

@VisibleForTesting(otherwise = java.lang.reflect.Modifier.PRIVATE)
const val topSearchBarTag = "topSearchBarTag"
@VisibleForTesting(otherwise = java.lang.reflect.Modifier.PRIVATE)
const val searchIconTag = "searchIconTag"
@VisibleForTesting(otherwise = java.lang.reflect.Modifier.PRIVATE)
const val searchBox = "searchBox"

@Composable
fun TopSearchBar(
    viewmodel: MoviesViewmodel,
    onCancelSeacrh: () -> Unit,
) {
...
